ovirt-host-deploy -- oVirt host deploy

????-??-?? - Version 1.1.2

 * openstack: rename quantum to neutron due to project rename,
   rhbz#1032890.

2013-09-07 - Version 1.1.1

 * vdsm: packages: stop libvirtd before using vdsm-tool to configure it.
   rhbz#999853.

2013-08-26 - Version 1.1.0

 * vdsm: bridge: fix vlan id detection, thanks to Jeff Bailey for reporting.
 * vdsm: bridge: fix format typo when querying network manager, thanks to
   Pascal Jakobi for reporting.
 * vdsm: bridge: fix python compatibility issue and network manager.
 * vdsm: bridge: attempt to rollback if bridge creation failed.
 * vdsm: hardware: do not fail if cannot read msr, rhbz#916589.
 * vdsm: vdsmid: do not attempt to install dmidecode on platforms other than
   x86.
 * vdsm: vdsmid: detect power cpu correctly.
 * vdsm: ovirt-node: detect nodes with own bridges and report back.
 * vdsm: packages: cgconfig is dependency of libvirt.
 * vdsm: packages: use new method of libvirt reconfigure.
 * vdsm: packages: disable NetworkManager service.
 * gluster: packages: start glusterd if no reboot.
 * tune: tuned: support gluster specific profile.
 * openstack: add neutron support.
 * build: re-introduce external gettext packaging.

2013-02-14 - Version 1.0.0

Alon Bar-Lev <alonbl@redhat.com>

 * support vdsm hooks by copying hooks from engine machine to host or by
   specifying a list of packages to be installed at host, refer to README for
   farther information.

 * offline packager feature.

 * tuned is installed with virtual-host profile.

 * initial implementation based on otpoi.

 * implementation is based on legacy vdsm-bootstrap pacakge functionality.

 * legacy-removed: legacy VDSM (<3.0) config upgrade.

 * legacy-removed: change machine width core file
  # echo /var/lib/vdsm/core > /proc/sys/kernel/core_pattern

 * legacy-removed: kernel version test, package dependency is sufficient.

 * legacy-removed: do not add kernel parameter processor.max_cstate=1